Sun Jun 22 09:11:15 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb: remove registry.
	  'registry' is not used and RFC3986 doesn't use it.

Sun Jun 22 09:10:09 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc3986_parser.rb: raise exception when given a URI string
	  has non ASCII in order to keep the regexp compiled for US-ASCII.

Sun Jun 22 09:05:42 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI::REGEXP): move to lib/uri/rfc2396_parser.rb.

	* lib/uri/common.rb (URI::Parser): ditto.

	* lib/uri/common.rb (URI.split): use RFC3986_Parser. [Feature #2542]

	* lib/uri/common.rb (URI.parse): ditto.

	* lib/uri/common.rb (URI.join): ditto.

	* lib/uri/common.rb (URI.extract): deprecated.

	* lib/uri/common.rb (URI.regexp): ditto.

	* lib/uri/rfc2396_parser.rb: added.

	* lib/uri/rfc3986_parser.rb: added.

Sun Jun 22 09:04:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/mailto.rb (initialize): as previous commit, fix arg_check

Sun Jun 22 09:01:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/ftp.rb (initialize): argument checking flag is arg_check,
	  but arg[-1] is fragment.

	* lib/uri/ftp.rb (initialize): explicitly specify arguments.

Sat Jun 21 12:50:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/extconf.rb: supply 0 to fill RUBY_LIBFFI_MODVERSION
	  with 3-digit.  libffi 3.1 returns just 2-digit.
	  [ruby-core:62920] [Bug #9897]

Sat Jun 21 07:06:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_find): [DOC] never accepted a symbol.
	  [ruby-dev:48308] [Bug #9966]

Fri Jun 20 17:15:43 2014  Koichi Sasada  <ko1@atdot.net>

	* test/lib/tracepointchecker.rb: add to check TracePoint healthiness.

	* test/runner.rb: use it.

Fri Jun 20 07:26:44 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: rewrite tests with
	  assert_consistent_call_return().

	  assert_consistent_call_return() is also modified to check
	  consistency.
